--- a/config/git/config
+++ b/config/git/config
@@ -26,7 +26,7 @@
     unadd = "reset HEAD"
     undo-commit = "reset --soft HEAD~1"
     restore-file = "checkout HEAD --"
-    get = "!git clone glf/$1"
+    get = "!git clone git@gitlab.com:flexe/$1"
 [url "git@github.com:"]
     insteadOf = gh:
 [url "git@gitlab.com:"]
