--- a/config/git/config
+++ b/config/git/config
@@ -26,7 +26,8 @@
 	unadd = "reset HEAD"
 	undo-commit = "reset --soft HEAD~1"
 	restore-file = "checkout HEAD --"
-	get = "!git clone git@gitlab.com:flexe/$1"
+	get = "clone git@gitlab.com:flexe/$1"
+	outta-here = "!echo https://www.youtube.com/watch?v=BHkfdZjshqY&t=34s"
 [url "git@github.com:"]
 	insteadOf = gh:
 [url "git@gitlab.com:"]
