--- a/config/git/config
+++ b/config/git/config
@@ -24,7 +24,7 @@
 [alias]
 	undo-commit = "reset --soft HEAD~1"
 	restore-file = "checkout HEAD --"
-	get = "clone -v git@gitlab.com:flexe/$1"
+	get = "!f() { git clone -v git@gitlab.com:flexe/$1; }; f"
 	outta-here = "!echo https://www.youtube.com/watch?v=BHkfdZjshqY&t=34s"
 [url "git@gitlab.com:"]
 	insteadOf = https://gitlab.com/
