--- a/config/git/config
+++ b/config/git/config
@@ -1,6 +1,6 @@
 [user]
 	name = Jason Bury
-	email = jason@knock.app
+	email = jasondougbury@gmail.com
 [init]
 	defaultBranch = main
 [github]
@@ -23,7 +23,7 @@
 [alias]
 	undo-commit = "reset --soft HEAD~1"
 	restore-file = "checkout HEAD --"
-	get = "!f() { git clone -v git@github.com:knocklabs/$1; }; f"
+	get = "!f() { git clone -v git@github.com:jbury/$1; }; f"
 	outta-here = "!echo https://www.youtube.com/watch?v=BHkfdZjshqY&t=34s"
 [url "git@gitlab.com:"]
 	insteadOf = https://gitlab.com/
